--- a/clusters/my-cluster/app/service.yaml
+++ b/clusters/my-cluster/app/service.yaml
@@ -2,12 +2,12 @@ apiVersion: v1
 kind: Service
 metadata:
   name: my-app-service
+  namespace: dev  
 spec:
   selector:
-    app: my-app
+    app: my-golang-deploy
   ports:
     - protocol: TCP
       port: 80
-      targetPort: 8080
-  type: LoadBalancer
+  type: LoadBalancer 
 
