--- a/clusters/my-cluster/appdir.yaml
+++ b/clusters/my-cluster/appdir.yaml
@@ -16,11 +16,11 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: app
-  namespace: dev
+  namespace: flux-system
 spec:
   interval: 3m0s
   path: ./app
   prune: true
   sourceRef:
     kind: GitRepository
-    name: flux-system
+    name: app
