add regular expression

--- a/clusters/my-cluster/podinfo-policy.yaml
+++ b/clusters/my-cluster/podinfo-policy.yaml
@@ -9,4 +9,4 @@ spec:
     name: podinfo
   policy:
     semver:
-      range: dev-*
+      range: ^dev-(?P<ts>[0-9]+-[0-9]+-[0-9]+-[0-9]+-[0-9]+-[0-9]+)$
