--- a/clusters/my-cluster/podinfo-deployment.yaml
+++ b/clusters/my-cluster/podinfo-deployment.yaml
@@ -1,8 +1,8 @@
-apiVersion: apps/v1
+auapiVersion: apps/v1
 kind: Deployment
 metadata:
   name: podinfo
-  namespace: dev
+  namespace: default
 spec:
   selector:
     matchLabels:
