--- a/clusters/my-cluster/podinfo-policy.yaml
+++ b/clusters/my-cluster/podinfo-policy.yaml
@@ -1,12 +1,15 @@
 ---
-apiVersion: image.toolkit.fluxcd.io/v1beta2
+apiVersion: image.toolkit.fluxcd.io/v1beta1
 kind: ImagePolicy
 metadata:
   name: podinfo
   namespace: flux-system
 spec:
+  filterTags:
+    pattern: '^dev-(\d+)-*'
+    extract: '$1'
   imageRepositoryRef:
     name: podinfo
   policy:
-    semver:
-      range: ^dev-(?P<ts>[0-9]+-[0-9]+-[0-9]+-[0-9]+-[0-9]+-[0-9]+)$
+    numerical:
+      order: asc
