--- a/clusters/my-cluster/flux-system-automation.yaml
+++ b/clusters/my-cluster/flux-system-automation.yaml
@@ -19,7 +19,7 @@ spec:
   interval: 10m0s
   sourceRef:
     kind: GitRepository
-    name: flux-system
+    name: app
   update:
     path: ./clusters/my-cluster
     strategy: Setters
