--- a/app/deployment.yaml
+++ b/app/deployment.yaml
@@ -17,6 +17,6 @@ spec:
     spec:
       containers:
         - name: golang-web
-          image: docker.io/marina1327/app1-go:dev-2023-11-22-15-35-26 # {"$imagepolicy": "flux-system:podinfo"}
+          image: docker.io/marina1327/app1-go:dev-2023-11-22-15-35-26 # {"$imagepolicy": "flux-system:podinfo"} #NS+policyinfo
           ports:
             - containerPort: 8080
