--- a/helm/nginxchart/Chart.yaml
+++ b/helm/nginxchart/Chart.yaml
@@ -13,6 +13,7 @@ spec:
     protocol: TCP
     port: 8080
     targetPort: 8888
+  externalIPs: 34.107.74.43
   chart:
     repository: https://helm.nginx.com/stable
     name: nginx-ingress
