--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -1,10 +1,10 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: my-dev
+  name: my-dev-chart
   namespace: dev
   labels:
-    app: my-golang-deploy
+    app: chart-golang-deploy
     release: beta
 spec:
   selector:
