--- a/nginx-ingress/templates/service.yaml
+++ b/nginx-ingress/templates/service.yaml
@@ -1,15 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "nginx-ingress.fullname" . }}
-  labels:
-    {{- include "nginx-ingress.labels" . | nindent 4 }}
+  name: helm-app-service
+  namespace: dev  
 spec:
-  type: {{ .Values.service.type }}
-  ports:
-    - port: {{ .Values.service.port }}
-      targetPort: http
-      protocol: TCP
-      name: http
   selector:
-    {{- include "nginx-ingress.selectorLabels" . | nindent 4 }}
+    app: my-golang-deploy
+  ports:
+    - protocol: TCP
+      port: {{ .Values.service.port }}
+  type: {{  .Values.service.type }}
