--- a/nginx-ingress/templates/service.yaml
+++ b/nginx-ingress/templates/service.yaml
@@ -1,12 +1,15 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: helm-app-service
-  namespace: dev  
+  name: {{ include "nginx-ingress.fullname" . }}
+  labels:
+    {{- include "nginx-ingress.labels" . | nindent 4 }}
 spec:
-  selector:
-    app: my-golang-deploy
+  type: {{ .Values.service.type }}
   ports:
-    - protocol: TCP
-      port: {{ .Values.service.port }}
-  type: {{  .Values.service.type }}
+    - port: {{ .Values.service.port }}
+      targetPort: http
+      protocol: TCP
+      name: http
+  selector:
+    {{- include "nginx-ingress.selectorLabels" . | nindent 4 }}
