--- a/helm/templates/service.yaml
+++ b/helm/templates/service.yaml
@@ -1,12 +1,19 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: helm-app-service
-  namespace: dev  
+  name: heml-app-service
+  namespace: dev
 spec:
+  ports:
+  - nodePort: 32284
+    port: {{ .Values.service.port }}
+    protocol: TCP
+    targetPort: {{ .Values.service.port }}
   selector:
     app: my-golang-deploy
-  ports:
-    - protocol: TCP
-      port: {{ .Values.service.port }}
+  sessionAffinity: None
   type: {{  .Values.service.type }}
+status:
+  loadBalancer: {}
+
+  
