--- a/clusters/my-cluster/newdir.yaml
+++ b/clusters/my-cluster/newdir.yaml
@@ -24,3 +24,16 @@ spec:
   sourceRef:
     kind: GitRepository
     name: app
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: nginx
+  namespace: flux-system
+spec:
+  interval: 3m0s
+  path: ./nginx
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: nginx
