--- a/nginx/kustomization.yaml
+++ b/nginx/kustomization.yaml
@@ -3,6 +3,6 @@ kind: Kustomization
 metadata:
   name: my-kustomization  
 resources:
-  - deployment.yaml
+  - my-values.yaml
   - templates/my-ingress.yaml
   - templates/deployment.yaml
