--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -9,12 +9,12 @@ metadata:
 spec:
   selector:
     matchLabels:
-      project: golang
+      app: chart-golang-deploy  
   template:
     metadata:
-      labels:
-        project: golang
-    spec:
+      labels:  
+        app: chart-golang-deploy
+    spec:      
       containers:
         - name: golang-web
           image: docker.io/marina1327/app1-go:dev-2023-11-22-15-35-26 # {"$imagepolicy": "flux-system:podinfo"} #NS+policyinfo
