--- a/clusters/my-cluster/newdir.yaml
+++ b/clusters/my-cluster/newdir.yaml
@@ -25,3 +25,43 @@ spec:
     kind: GitRepository
     name: app
 
+---
+apiVersion: source.toolkit.fluxcd.io/v1
+kind: GitRepository
+metadata:
+  name: monitoring
+  namespace: flux-system
+spec:
+  interval: 1m0s
+  ref:
+    branch: main
+  secretRef:
+    name: flux-system
+  url: ssh://git@github.com/popilmv/monitoring.git
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: monitoring
+  namespace: flux-system
+spec:
+  interval: 3m0s
+  path: ./grafana
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: monitoring
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: monitoring
+  namespace: flux-system
+spec:
+  interval: 3m0s
+  path: ./prometheus
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: monitoring
+
