--- a/clusters/my-cluster/newdir.yaml
+++ b/clusters/my-cluster/newdir.yaml
@@ -24,15 +24,14 @@ spec:
   sourceRef:
     kind: GitRepository
     name: app
-
 ---
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: GitRepository
 metadata:
   name: monitoring
-  namespace: flux-system
+  namespace: default
 spec:
-  interval: 1m0s
+  interval: 2m0s
   ref:
     branch: main
   secretRef:
@@ -43,7 +42,7 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: monitoring
-  namespace: flux-system
+  namespace: default
 spec:
   interval: 3m0s
   path: ./grafana
@@ -56,7 +55,7 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: monitoring
-  namespace: flux-system
+  namespace: default
 spec:
   interval: 3m0s
   path: ./prometheus
