--- a/clusters/my-cluster/newdir.yaml
+++ b/clusters/my-cluster/newdir.yaml
@@ -37,5 +37,19 @@ spec:
   secretRef:
     name: flux-system
   url: ssh://git@github.com/popilmv/monitoring.git
+---
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: monitoring
+  namespace: default
+spec:
+  interval: 3m0s
+  path: ./grafana
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: monitoring
 
 
